--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -49,6 +49,7 @@ body.reply-edit .reply {
 #bbpress-forums .status-spam.even {
 	background-color: #fee;
 }
+
 #bbpress-forums .status-trash.odd,
 #bbpress-forums .status-spam.odd {
 	background-color: #fdd;
@@ -66,7 +67,7 @@ body.reply-edit .reply {
 }
 
 #bbpress-forums ul {
-	background:  none;
+	background: none;
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -139,6 +140,7 @@ li.bbp-topic-title {
 	text-align: left;
 	width: 55%;
 }
+
 li.bbp-forum-topic-count,
 li.bbp-topic-voice-count,
 li.bbp-forum-reply-count,
@@ -173,8 +175,8 @@ li.bbp-topic-freshness {
 	background: none;
 	border: none;
 	font-size: 16px;
- 	line-height: 1em;
- 	margin: 8px 0;
+	line-height: 1em;
+	margin: 8px 0;
 	padding: 0;
 	text-transform: none;
 }
@@ -358,7 +360,7 @@ span.bbp-author-ip {
 #bbpress-forums div.bbp-reply-content code,
 #bbpress-forums div.bbp-topic-content pre,
 #bbpress-forums div.bbp-reply-content pre {
-	font-family: Inconsolata, Consolas, Monaco, Lucida Console, monospace;
+	font-family: Inconsolata, Consolas, Monaco, "Lucida Console", monospace;
 	display: inline-block;
 	background-color: #f9f9f9;
 	border: 1px solid #ddd;
@@ -418,7 +420,7 @@ div.bbp-topic-tags {
 
 #bbpress-forums div.bbp-breadcrumb p,
 #bbpress-forums div.bbp-topic-tags p {
-	margin-bottom: 10px
+	margin-bottom: 10px;
 }
 
 #bbpress-forums div.bbp-topic-tags {
@@ -436,19 +438,19 @@ div.bbp-topic-tags {
 	clear: left;
 }
 
-	#bbpress-forums #bbp-search-form .hidden {
-		height: 0;
-		width: 0;
-		overflow: hidden;
-		position: absolute;
-		background: none;
-		left: -999em;
-	}
+#bbpress-forums #bbp-search-form .hidden {
+	height: 0;
+	width: 0;
+	overflow: hidden;
+	position: absolute;
+	background: none;
+	left: -999em;
+}
 
-	#bbpress-forums #bbp-search-form #bbp_search {
-		display: inline-block;
-		width: auto;
-	}
+#bbpress-forums #bbp-search-form #bbp_search {
+	display: inline-block;
+	width: auto;
+}
 
 #bbpress-forums div.bbp-search-form {
 	float: right;
@@ -461,6 +463,7 @@ span.bbp-admin-links {
 	float: right;
 	color: #ddd;
 }
+
 span.bbp-admin-links a {
 	color: #bbb;
 	font-weight: normal;
@@ -468,12 +471,15 @@ span.bbp-admin-links a {
 	text-transform: uppercase;
 	text-decoration: none;
 }
+
 fieldset span.bbp-admin-links {
 	float: left;
 }
+
 tr td span.bbp-admin-links a:hover {
 	color: #ff4b33;
 }
+
 td.bbp-topic-admin-links,
 td.bbp-topic-counts {
 	width: 50%;
@@ -498,22 +504,25 @@ td.bbp-topic-counts {
 	background-color: #dfd;
 	font-weight: bold;
 	font-size: 13px;
-	}
-	.bbp-row-actions #favorite-toggle a:hover {
-		color: #5a5;
-		border-color: #7c7;
-		background-color: #beb;
-	}
-	.bbp-row-actions #favorite-toggle span.is-favorite a {
-		color: #faa;
-		border: 1px solid #faa;
-		background-color: #fee;
-		}
-		.bbp-row-actions #favorite-toggle span.is-favorite a:hover {
-			color: #c88;
-			border-color: #c88;
-			background-color: #fdd;
-		}
+}
+
+.bbp-row-actions #favorite-toggle a:hover {
+	color: #5a5;
+	border-color: #7c7;
+	background-color: #beb;
+}
+
+.bbp-row-actions #favorite-toggle span.is-favorite a {
+	color: #faa;
+	border: 1px solid #faa;
+	background-color: #fee;
+}
+
+.bbp-row-actions #favorite-toggle span.is-favorite a:hover {
+	color: #c88;
+	border-color: #c88;
+	background-color: #fdd;
+}
 
 .bbp-row-actions #subscription-toggle a {
 	text-decoration: none;
@@ -523,22 +532,25 @@ td.bbp-topic-counts {
 	background-color: #dfd;
 	font-weight: bold;
 	font-size: 13px;
-	}
-	.bbp-row-actions #subscription-toggle a:hover {
-		color: #5a5;
-		border-color: #7c7;
-		background-color: #beb;
-	}
-	.bbp-row-actions #subscription-toggle span.is-subscribed a {
-		color: #faa;
-		border: 1px solid #faa;
-		background-color: #fee;
-		}
-		.bbp-row-actions #subscription-toggle span.is-subscribed a:hover {
-			color: #c88;
-			border-color: #c88;
-			background-color: #fdd;
-		}
+}
+
+.bbp-row-actions #subscription-toggle a:hover {
+	color: #5a5;
+	border-color: #7c7;
+	background-color: #beb;
+}
+
+.bbp-row-actions #subscription-toggle span.is-subscribed a {
+	color: #faa;
+	border: 1px solid #faa;
+	background-color: #fee;
+}
+
+.bbp-row-actions #subscription-toggle span.is-subscribed a:hover {
+	color: #c88;
+	border-color: #c88;
+	background-color: #fdd;
+}
 
 #bbpress-forums .bbp-forum-info .bbp-forum-content,
 #bbpress-forums p.bbp-topic-meta {
@@ -564,29 +576,31 @@ td.bbp-topic-counts {
 	float: right;
 	list-style: none;
 	display: inline;
-	}
-	.bbp-pagination-links a,
-	.bbp-pagination-links span.current {
-		display: block;
-		float: left;
-		padding: 0px 5px;
-		margin-left: 5px;
-		border: 1px solid #efefef;
-		text-decoration: none;
-		}
-		.bbp-pagination-links a:hover,
-		.bbp-pagination-links span.current {
-			background: #eee;
-			opacity: 0.8;
-			border: 1px solid #ddd;
-		}
+}
 
-	.bbp-pagination-links span.dots {
-		display: block;
-		float: left;
-		padding: 1px 4px;
-		margin-left: 5px;
-	}
+.bbp-pagination-links a,
+.bbp-pagination-links span.current {
+	display: block;
+	float: left;
+	padding: 0 5px;
+	margin-left: 5px;
+	border: 1px solid #efefef;
+	text-decoration: none;
+}
+
+.bbp-pagination-links a:hover,
+.bbp-pagination-links span.current {
+	background: #eee;
+	opacity: 0.8;
+	border: 1px solid #ddd;
+}
+
+.bbp-pagination-links span.dots {
+	display: block;
+	float: left;
+	padding: 1px 4px;
+	margin-left: 5px;
+}
 
 .bbp-pagination {
 	float: left;
@@ -598,14 +612,15 @@ td.bbp-topic-counts {
 	display: inline-block;
 	margin-left: 5px;
 	margin-bottom: 2px;
-	}
-	.bbp-topic-pagination a {
-		font-size: 10px;
-		line-height: 10px;
-		padding: 1px 3px;
-		border: 1px solid #ddd;
-		text-decoration: none;
-	}
+}
+
+.bbp-topic-pagination a {
+	font-size: 10px;
+	line-height: 10px;
+	padding: 1px 3px;
+	border: 1px solid #ddd;
+	text-decoration: none;
+}
 
 
 /* =Forms
@@ -676,6 +691,7 @@ textarea#bbp_forum_content {
 .bbp-topic-tag-form {
 	clear: left;
 }
+
 body.topic-edit .bbp-topic-form div.avatar img,
 body.reply-edit .bbp-reply-form div.avatar img,
 body.single-forum .bbp-topic-form div.avatar img,
@@ -695,7 +711,7 @@ body.topic-edit .bbp-topic-form code,
 body.reply-edit .bbp-reply-form code {
 	font-size: 10px;
 	background-color: #f0fff8;
-	border: 1px solid #CEEFE1;
+	border: 1px solid #ceefe1;
 	display: block;
 	padding: 8px;
 	margin-top: 5px;
@@ -751,6 +767,7 @@ p.form-allowed-tags {
 	padding: 5px;
 	min-height: 26px;
 }
+
 #bbpress-forums div.bbp-the-content-wrapper td.mceToolbar {
 	padding: 4px 4px 8px;
 }
@@ -771,89 +788,102 @@ p.form-allowed-tags {
 #bbpress-forums #bbp-your-profile fieldset {
 	padding: 20px 20px 0 20px;
 }
-	#bbpress-forums #bbp-your-profile fieldset div {
-		margin-bottom: 20px;
-		float: left;
-		width: 100%;
-		clear: left;
-	}
-	#bbpress-forums #bbp-your-profile fieldset select {
-		margin-bottom: 0;
-	}
-	#bbpress-forums #bbp-your-profile fieldset input,
-	#bbpress-forums #bbp-your-profile fieldset textarea {
-		margin-bottom: 0;
-		width: 60%;
-		background: #f9f9f9;
-		border: 1px solid #ddd;
-		-webkit-box-shadow: none;
-		box-shadow: none;
-		padding: 5px 8px;
-		-webkit-border-radius: 0;
-		border-radius: 0;
-	}
-	#bbpress-forums #bbp-your-profile fieldset input:focus,
-	#bbpress-forums #bbp-your-profile fieldset textarea:focus {
-		border: 1px solid #ccc;
-		-webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
-		box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
-		outline-color: rgba(240,255,240,0.1);
-	}
-	#bbpress-forums #bbp-your-profile fieldset.bbp-form input.checkbox {
-		width: auto;
-	}
-	#bbpress-forums #bbp-your-profile fieldset legend {
-		display: none;
-	}
-	#bbpress-forums #bbp-your-profile fieldset label[for] {
-		float: left;
-		width: 20%;
-		padding: 5px 20px 5px 0;
-		text-align: right;
-		cursor: pointer;
-	}
-	#bbpress-forums #bbp-your-profile fieldset dl label[for] {
-		text-align: left;
-		width: 60%;
-	}
-	#bbpress-forums #bbp-your-profile fieldset span.description {
-		margin: 5px 0 0 20%;
-		font-size: 12px;
-		font-style: italic;
-		float: left;
-		clear: left;
-		width: 60%;
-		padding: 5px 8px;
-		border: #cee1ef 1px solid;
-		background-color: #f0f8ff;
-	}
 
-	#bbpress-forums #bbp-your-profile fieldset fieldset {
-		margin: 0;
-		border: none;
-		padding: 0;
-		clear: none;
-		float: none;
-	}
-	#bbpress-forums #bbp-your-profile fieldset fieldset.password {
-		width: 60%;
-		display: inline;
-	}
-	#bbpress-forums #bbp-your-profile fieldset fieldset.password input,
-	#bbpress-forums #bbp-your-profile fieldset fieldset.password span {
-		width: 100%;
-	}
-	#bbpress-forums #bbp-your-profile fieldset fieldset.capabilities dl {
-		margin: 0;
-	}
-	#bbpress-forums #bbp-your-profile fieldset fieldset.password span.description {
-		margin-left: 0;
-		margin-bottom: 20px;
-	}
+#bbpress-forums #bbp-your-profile fieldset div {
+	margin-bottom: 20px;
+	float: left;
+	width: 100%;
+	clear: left;
+}
 
-	#bbpress-forums #bbp-your-profile fieldset.submit button {
-		float: right;
-	}
+#bbpress-forums #bbp-your-profile fieldset select {
+	margin-bottom: 0;
+}
+
+#bbpress-forums #bbp-your-profile fieldset input,
+#bbpress-forums #bbp-your-profile fieldset textarea {
+	margin-bottom: 0;
+	width: 60%;
+	background: #f9f9f9;
+	border: 1px solid #ddd;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	padding: 5px 8px;
+	-webkit-border-radius: 0;
+	border-radius: 0;
+}
+
+#bbpress-forums #bbp-your-profile fieldset input:focus,
+#bbpress-forums #bbp-your-profile fieldset textarea:focus {
+	border: 1px solid #ccc;
+	-webkit-box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.1);
+	box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.1);
+	outline-color: rgba(240, 255, 240, 0.1);
+}
+
+#bbpress-forums #bbp-your-profile fieldset.bbp-form input.checkbox {
+	width: auto;
+}
+
+#bbpress-forums #bbp-your-profile fieldset legend {
+	display: none;
+}
+
+#bbpress-forums #bbp-your-profile fieldset label[for] {
+	float: left;
+	width: 20%;
+	padding: 5px 20px 5px 0;
+	text-align: right;
+	cursor: pointer;
+}
+
+#bbpress-forums #bbp-your-profile fieldset dl label[for] {
+	text-align: left;
+	width: 60%;
+}
+
+#bbpress-forums #bbp-your-profile fieldset span.description {
+	margin: 5px 0 0 20%;
+	font-size: 12px;
+	font-style: italic;
+	float: left;
+	clear: left;
+	width: 60%;
+	padding: 5px 8px;
+	border: #cee1ef 1px solid;
+	background-color: #f0f8ff;
+}
+
+#bbpress-forums #bbp-your-profile fieldset fieldset {
+	margin: 0;
+	border: none;
+	padding: 0;
+	clear: none;
+	float: none;
+}
+
+#bbpress-forums #bbp-your-profile fieldset fieldset.password {
+	width: 60%;
+	display: inline;
+}
+
+#bbpress-forums #bbp-your-profile fieldset fieldset.password input,
+#bbpress-forums #bbp-your-profile fieldset fieldset.password span {
+	width: 100%;
+}
+
+#bbpress-forums #bbp-your-profile fieldset fieldset.capabilities dl {
+	margin: 0;
+}
+
+#bbpress-forums #bbp-your-profile fieldset fieldset.password span.description {
+	margin-left: 0;
+	margin-bottom: 20px;
+}
+
+#bbpress-forums #bbp-your-profile fieldset.submit button {
+	float: right;
+}
 
 /* =Notices
 -------------------------------------------------------------- */
@@ -871,37 +901,44 @@ div.indicator-hint {
 	color: #000;
 	clear: both;
 }
+
 div.bbp-template-notice a {
 	color: #555;
 	text-decoration: none;
 }
-	div.bbp-template-notice a:hover {
-		color: #000;
-	}
-	div.bbp-template-notice.info {
-		border: #cee1ef 1px solid;
-		background-color: #f0f8ff;
-	}
-	div.bbp-template-notice.important {
-		border: #e6db55 1px solid;
-		background-color: #fffbcc;
-	}
-	div.bbp-template-notice.error,
-	div.bbp-template-notice.warning {
-		background-color: #ffebe8;
-		border-color: #c00;
-	}
-	div.bbp-template-notice.error a,
-	div.bbp-template-notice.warning a {
-		color: #c00;
-	}
-	div.bbp-template-notice p,
-	div.bbp-template-notice li {
-		margin: 0.5em 0 6px 0 !important;
-		padding: 2px;
-		font-size: 12px;
-		line-height: 140%;
-	}
+
+div.bbp-template-notice a:hover {
+	color: #000;
+}
+
+div.bbp-template-notice.info {
+	border: #cee1ef 1px solid;
+	background-color: #f0f8ff;
+}
+
+div.bbp-template-notice.important {
+	border: #e6db55 1px solid;
+	background-color: #fffbcc;
+}
+
+div.bbp-template-notice.error,
+div.bbp-template-notice.warning {
+	background-color: #ffebe8;
+	border-color: #c00;
+}
+
+div.bbp-template-notice.error a,
+div.bbp-template-notice.warning a {
+	color: #c00;
+}
+
+div.bbp-template-notice p,
+div.bbp-template-notice li {
+	margin: 0.5em 0 6px 0 !important;
+	padding: 2px;
+	font-size: 12px;
+	line-height: 140%;
+}
 
 /* =Stickies
 -------------------------------------------------------------- */
@@ -1148,37 +1185,45 @@ body.my-account #bbpress-forums {
 /* =Standard Mobile Landscape
 -------------------------------------------------------------- */
 @media only screen and (max-width: 480px) {
+
 	#bbpress-forums div.bbp-topic-tags {
 		clear: left;
 		float: left;
 	}
+
 	div.bbp-search-form input,
 	div.bbp-search-form button {
 		font-size: 11px;
 		padding: 2px;
 	}
+
 	li.bbp-forum-info,
 	li.bbp-topic-title {
 		width: 45%;
 	}
+
 	li.bbp-forum-topic-count,
 	li.bbp-forum-reply-count,
 	li.bbp-topic-voice-count,
 	li.bbp-topic-reply-count {
 		width: 15%;
 	}
+
 	span.bbp-topic-post-date,
 	span.bbp-reply-post-date {
 		float: left;
 	}
+
 	span.bbp-admin-links {
 		clear: left;
 		float: left;
 	}
+
 	#bbpress-forums .bbp-forums-list li {
 		display: block;
 		font-size: 11px;
 	}
+
 	#bbpress-forums .bbp-body div.bbp-topic-author,
 	#bbpress-forums .bbp-body div.bbp-reply-author {
 		margin: -15px 10px 10px;
@@ -1188,6 +1233,7 @@ body.my-account #bbpress-forums {
 		text-align: left;
 		width: 100%;
 	}
+
 	#bbpress-forums div.bbp-topic-author a.bbp-author-name,
 	#bbpress-forums div.bbp-reply-author a.bbp-author-name {
 		clear: none;
@@ -1195,6 +1241,7 @@ body.my-account #bbpress-forums {
 		margin-left: 0;
 		word-wrap: break-word;
 	}
+
 	#bbpress-forums div.bbp-topic-author img.avatar,
 	#bbpress-forums div.bbp-reply-author img.avatar {
 		position: absolute;
@@ -1203,32 +1250,39 @@ body.my-account #bbpress-forums {
 		width: 60px;
 		height: auto;
 	}
+
 	#bbpress-forums div.bbp-topic-author .bbp-author-role,
 	#bbpress-forums div.bbp-reply-author .bbp-author-role {
 		font-size: 12px;
 		font-style: normal;
 	}
+
 	#bbpress-forums .bbp-body div.bbp-topic-content,
 	#bbpress-forums .bbp-body div.bbp-reply-content {
 		clear: both;
 		margin: 10px;
 		padding: 0;
 	}
+
 	#bbpress-forums div.bbp-topic-content p,
 	#bbpress-forums div.bbp-reply-content p {
 		margin-bottom: 1em;
 	}
+
 	div.bbp-submit-wrapper {
 		float: left;
 	}
+
 	#bbpress-forums fieldset.bbp-form {
 		padding: 0 10px 10px;
 	}
+
 	#bbpress-forums #bbp-user-body {
 		clear: both;
 		margin-left: 0;
 		word-wrap: break-word;
 	}
+
 	#bbpress-forums div.bbp-forum-title h3,
 	#bbpress-forums div.bbp-topic-title h3,
 	#bbpress-forums div.bbp-reply-title h3 {
@@ -1239,20 +1293,24 @@ body.my-account #bbpress-forums {
 /* =Standard Mobile Portrait
 -------------------------------------------------------------- */
 @media only screen and (max-width: 320px) {
+
 	#bbpress-forums div.bbp-search-form {
 		margin-bottom: 10px;
 	}
+
 	#bbpress-forums li.bbp-header li.bbp-forum-info,
 	#bbpress-forums li.bbp-body li.bbp-forum-info,
 	#bbpress-forums li.bbp-header li.bbp-topic-title,
 	#bbpress-forums li.bbp-body li.bbp-topic-title {
 		width: 100%;
 	}
+
 	#bbpress-forums li.bbp-header li.bbp-forum-info,
 	#bbpress-forums li.bbp-header li.bbp-topic-title {
 		text-align: center;
 		text-transform: uppercase;
 	}
+
 	#bbpress-forums li.bbp-header li.bbp-forum-topic-count,
 	#bbpress-forums li.bbp-header li.bbp-forum-reply-count,
 	#bbpress-forums li.bbp-body li.bbp-forum-topic-count,
@@ -1263,12 +1321,14 @@ body.my-account #bbpress-forums {
 	#bbpress-forums li.bbp-body li.bbp-topic-reply-count {
 		width: 20%;
 	}
+
 	#bbpress-forums li.bbp-header li.bbp-forum-freshness,
 	#bbpress-forums li.bbp-body li.bbp-forum-freshness,
 	#bbpress-forums li.bbp-header li.bbp-topic-freshness,
 	#bbpress-forums li.bbp-body li.bbp-topic-freshness {
 		width: 58%;
 	}
+
 	#bbpress-forums li.bbp-body li.bbp-forum-topic-count,
 	#bbpress-forums li.bbp-body li.bbp-forum-reply-count,
 	#bbpress-forums li.bbp-body li.bbp-forum-freshness,
@@ -1277,41 +1337,50 @@ body.my-account #bbpress-forums {
 	#bbpress-forums li.bbp-body li.bbp-topic-freshness {
 		margin-top: 7px;
 	}
+
 	#bbpress-forums li.bbp-header,
 	#bbpress-forums li.bbp-footer {
 		font-size: 10px;
 	}
+
 	#bbpress-forums li.bbp-header div.bbp-search-author,
 	#bbpress-forums li.bbp-header div.bbp-topic-author,
 	#bbpress-forums li.bbp-header div.bbp-reply-author {
 		text-align: left;
 		width: 25%;
 	}
+
 	#bbpress-forums li.bbp-header div.bbp-search-content,
 	#bbpress-forums li.bbp-header div.bbp-topic-content,
 	#bbpress-forums li.bbp-header div.bbp-reply-content {
 		margin-left: 25%;
 	}
+
 	#bbpress-forums div.bbp-template-notice img.avatar,
 	#bbpress-forums p.bbp-topic-meta img.avatar {
 		width: 14px;
 		height: auto;
 	}
+
 	#bbpress-forums div.bbp-the-content-wrapper td.mceToolbar {
 		padding: 1px;
 	}
+
 	#bbpress-forums div.bbp-the-content-wrapper td.mceToolbar td {
 		width: 20px;
 		height: 20px;
 	}
+
 	#bbpress-forums div.wp-editor-container {
 		width: 100%;
 		overflow: auto;
 	}
+
 	#bbpress-forums input#bbp_topic_title,
 	#bbpress-forums input#bbp_topic_tags {
 		width: 95%;
 	}
+
 	#bbpress-forums div.bbp-forum-title h3,
 	#bbpress-forums div.bbp-topic-title h3,
 	#bbpress-forums div.bbp-reply-title h3 {
@@ -1322,6 +1391,7 @@ body.my-account #bbpress-forums {
 /* =Extra Small Mobile
 -------------------------------------------------------------- */
 @media only screen and (max-width: 240px) {
+
 	#bbpress-forums li.bbp-header li.bbp-forum-topic-count,
 	#bbpress-forums li.bbp-header li.bbp-forum-reply-count,
 	#bbpress-forums li.bbp-body li.bbp-forum-topic-count,
@@ -1335,6 +1405,7 @@ body.my-account #bbpress-forums {
 	#bbpress-forums li.bbp-footer div.bbp-reply-author {
 		width: 45%;
 	}
+
 	#bbpress-forums li.bbp-header li.bbp-forum-freshness,
 	#bbpress-forums li.bbp-body li.bbp-forum-freshness,
 	#bbpress-forums li.bbp-header li.bbp-topic-freshness,
@@ -1342,10 +1413,12 @@ body.my-account #bbpress-forums {
 		clear: both;
 		width: 100%;
 	}
+
 	#bbpress-forums li.bbp-header li.bbp-forum-freshness,
 	#bbpress-forums li.bbp-header li.bbp-topic-freshness {
 		text-align: center;
 	}
+
 	#bbpress-forums li.bbp-body li.bbp-topic-freshness,
 	#bbpress-forums li.bbp-header div.bbp-search-author,
 	#bbpress-forums li.bbp-header div.bbp-search-content,
@@ -1356,28 +1429,34 @@ body.my-account #bbpress-forums {
 		margin-left: 0;
 		text-align: left;
 	}
+
 	#bbpress-forums li.bbp-body li.bbp-topic-freshness p.bbp-topic-meta {
 		display: inline-block;
 	}
+
 	#bbpress-forums li.bbp-header {
 		overflow: hidden;
 	}
+
 	#bbpress-forums li.bbp-footer div.bbp-search-content,
 	#bbpress-forums li.bbp-footer div.bbp-topic-content,
 	#bbpress-forums li.bbp-footer div.bbp-reply-content {
 		display: inline-block;
 		margin-left: 0;
 	}
+
 	#bbpress-forums li.bbp-body div.bbp-topic-author,
 	#bbpress-forums li.bbp-body div.bbp-reply-author {
 		min-height: 60px;
 		padding-left: 60px;
 	}
+
 	#bbpress-forums div.bbp-topic-author img.avatar,
 	#bbpress-forums div.bbp-reply-author img.avatar {
 		width: 40px;
 		height: auto;
 	}
+
 	#bbpress-forums div.bbp-forum-title h3,
 	#bbpress-forums div.bbp-topic-title h3,
 	#bbpress-forums div.bbp-reply-title h3 {
