--- a/src/includes/admin/css/admin.css
+++ b/src/includes/admin/css/admin.css
@@ -210,3 +210,98 @@ body.rtl #bbp-dashboard-right-now a.button {
 	float: left;
 	clear: left;
 }
+
+/* List Tables */
+
+body.post-type-forum #minor-publishing,
+body.post-type-forum #save-post {
+	display: none;
+}
+
+body.post-type-forum strong.label,
+body.post-type-topic strong.label,
+body.post-type-reply strong.label {
+	display: inline-block;
+	width: 60px;
+}
+
+.column-bbp_forum_topic_count,
+.column-bbp_forum_reply_count,
+.column-bbp_topic_reply_count,
+.column-bbp_topic_voice_count {
+	width: 8% !important;
+}
+
+.column-author,
+.column-bbp_forum_mods,
+.column-bbp_reply_author,
+.column-bbp_topic_author {
+	width: 10% !important;
+}
+
+.column-bbp_topic_forum,
+.column-bbp_reply_forum,
+.column-bbp_reply_topic {
+	width: 10% !important;
+}
+
+.column-bbp_forum_freshness,
+.column-bbp_topic_freshness {
+	width: 10% !important;
+}
+
+.column-bbp_forum_created,
+.column-bbp_topic_created,
+.column-bbp_reply_created {
+	width: 15% !important;
+}
+
+.column-bbp_topic_reply_author,
+.column-bbp_forum_topic_author {
+	width: 25% !important;
+}
+
+.column-bbp_topic_reply_author .avatar,
+.column-bbp_forum_topic_author .avatar {
+	float: left;
+	margin-right: 10px;
+}
+
+#bbp_moderators {
+	width: 100%;
+}
+
+#bbp_forum_attributes hr {
+	border-style: solid;
+	border-width: 1px;
+	border-color: #ccc #fff #fff #ccc;
+}
+
+#the-list .status-closed {
+	background-color: #f5f5f5;
+}
+
+#the-list .status-closed:nth-child(odd) {
+	background-color: #f0f0f0;
+}
+
+#the-list .status-spam {
+	background-color: #ffeeee;
+}
+
+#the-list .status-spam:nth-child(odd) {
+	background-color: #ffdddd;
+}
+
+#the-list .status-pending {
+	background-color: #fff2e8;
+}
+
+#the-list .status-pending:nth-child(odd) {
+	background-color: #fff7f1;
+}
+
+#the-list .status-closed td,
+#the-list .status-spam td {
+	color: #999;
+}
