Theme Compat: Improved Twenty Seventeen support:
* Add supplemental `bbpress-wrapper` class to `#bbpress-forums` div elements
* Remove box-shadow styling form bbPress's `entry-content` section links
* Provides middle-of-the-road targeting of bbPress template content, for complex styling relationships where ID's may be too powerful and classes may not have existed previously

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -8,6 +8,11 @@
 /* =bbPress Style
 -------------------------------------------------------------- */
 
+.entry-content .bbpress-wrapper a {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
 #bbpress-forums hr {
 	margin: 0 0 24px;
 }
