Admin: More admin mark-up updates
* Add `hr` after `h1`s on custom screens
* More accurate meta-box wrapper mark-up

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -316,7 +316,7 @@ body.post-type-reply strong.label {
 
 /* Converter */
 
-div.bbp-converter-monitor .inside {
+#bbp-converter-monitor .inside {
 	margin-bottom: 0;
 }
 
