Converter: Port changes proposed for 2.7 in for 2.6:
* Add a timer UI to show the count down until the next step
* Move converter settings into the normal options & settings arrays
* Update fields, sections, & pages as needed
* Update `converter.js` version to use `bbp_get_version()`
* Make connection & options persistent across requests whenever possible, and trust the settings if settings change
* Split steps up into private methods, out of the massive `do_steps()` method

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -360,3 +360,12 @@ div.bbp-converter-log .step {
 #bbp-converter-stop {
 	display: none;
 }
+
+#bbp-converter-timer {
+	position: absolute;
+	right: 10px;
+	top: 4px;
+	padding: 5px;
+	border: 1px solid #ddd;
+	background-color: #fafafa;
+}
