Tools: Improvements to repair, upgrade, and converter tools.
* Use escaped gettext equivalent functions where appropriate
* Rename `description` to `title` so that more descriptive descriptions can be used per-tool in a future version
* Register all scripts, and properly enqueue them only a needed
* Reorder & re-title some tools to better match each other

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -369,3 +369,9 @@ div.bbp-converter-log .step {
 	border: 1px solid #ddd;
 	background-color: #fafafa;
 }
+
+/* Tools */
+
+td.bbp-tool-title strong {
+	display: block;
+}
