Statistics: Improvements to "At a Glance" integration.
* Prefer `bbp_get_total_users()` over `count_users()` to speed up loading
* Don't include empty array values
* Don't link to areas the current user cannot access
* Skip if current user cannot at least spectate (blocked or no access)

Fixes #2770.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -54,6 +54,10 @@ th .bbp_replies_column:before,
 	content: "\f323";
 }
 
+#dashboard_right_now a.bbp-glance-users:before {
+	content: "\f110";
+}
+
 th .bbp_forums_column,
 th .bbp_topics_column,
 th .bbp_replies_column {
