--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -30,6 +30,7 @@
 
 .entry-content .bbpress-wrapper a,
 .entry-content .bbpress-wrapper a:hover {
+	-webkit-box-shadow: none;
 	box-shadow: none;
 }
 
@@ -701,6 +702,8 @@ textarea#bbp_reply_content,
 textarea#bbp_topic_content,
 textarea#bbp_forum_content {
 	width: 97%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -845,13 +848,16 @@ p.form-allowed-tags {
 	width: 60%;
 	background-color: #f9f9f9;
 	border: 1px solid #ddd;
+	-webkit-box-shadow: none;
 	box-shadow: none;
+	-webkit-border-radius: 0;
 	border-radius: 0;
 }
 
 #bbpress-forums #bbp-your-profile fieldset input:focus,
 #bbpress-forums #bbp-your-profile fieldset textarea:focus {
 	border: 1px solid #ccc;
+	-webkit-box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.1);
 	box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.1);
 	outline-color: rgba(240, 255, 240, 0.1);
 }
@@ -923,6 +929,8 @@ p.form-allowed-tags {
 #bbpress-forums #bbp-your-profile fieldset fieldset.password .password-button-wrapper button {
 	width: 46%;
 	margin: 4% 2%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	display: inline-block;
 }
@@ -948,6 +956,8 @@ p.form-allowed-tags {
 	margin: 0;
 	padding: 8px;
 	text-align: center;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	display: inline-block;
 }
@@ -1019,6 +1029,7 @@ div.indicator-hint {
 	border-style: solid;
 	padding: 0 0.6em;
 	margin: 5px 0 15px;
+	-webkit-border-radius: 3px;
 	border-radius: 3px;
 	background-color: #ffffe0;
 	border-color: #e6db55;
@@ -1157,6 +1168,7 @@ div.bbp-template-notice li {
 -------------------------------------------------------------- */
 
 #bbpress-forums img.avatar {
+	-webkit-box-shadow: none;
 	box-shadow: none;
 	display: inline-block;
 }
@@ -1329,6 +1341,7 @@ body.my-account #bbpress-forums {
 	left: 50%;
 	margin-top: -75px;
 	margin-left: -185px;
+	-webkit-border-radius: 3px;
 	border-radius: 3px;
 	border: 1px solid #aaa;
 	padding: 15px 10px 10px;
