--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -31,6 +31,7 @@
 .entry-content .bbpress-wrapper a,
 .entry-content .bbpress-wrapper a:hover {
 	box-shadow: none;
+	border: none;
 }
 
 #bbpress-forums hr {
