Admin/Converter: Lazy load admin & converter as needed.
* Move admin class into its own file
* Remove `admin.php`
* Introduce `_setup_` functions to make loading them on the fly easier
* Simplify converter logic for smoother starting/stopping
* Improved UI for timer/status updates
* Remove double-duty variables from `BBP_Converter` and response data
* Switch from text-only response value to JSON object for improved flexibility

This allows the converter to return more data, and makes it easier to work with that data.

Todo:

* Error responses
* Check that starts are bumping correctly inside of steps
* Better utilize JSON responses

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -365,13 +365,12 @@ div.bbp-converter-log .step {
 	display: none;
 }
 
-#bbp-converter-timer {
-	position: absolute;
-	right: 10px;
-	top: 4px;
-	padding: 5px;
-	border: 1px solid #ddd;
-	background-color: #fafafa;
+#bbp-converter-status {
+	font-weight: 400;
+	font-size: 12px;
+	color: #aaa;
+	display: block;
+	margin-top: 2px;
 }
 
 /* Tools */
