Assets: Update admin CSS/JS to match lint rules, and update packages.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -10,6 +10,7 @@
 /* Version Badge */
 
 .bbp-badge {
+	-webkit-transform-origin: top left;
 	transform-origin: top left;
 	-webkit-animation: swoop 16s infinite linear;
 	animation: swoop 16s infinite linear;
@@ -42,17 +43,86 @@
 	content: "\f449";
 }
 
+@-webkit-keyframes buzz {
+
+	0% {
+		right: -2px;
+		top: -1px;
+	}
+
+	25% {
+		right: 1px;
+		top: 2px;
+	}
+
+	50% {
+		right: -3px;
+		top: -1px;
+	}
+
+	75% {
+		right: 2px;
+		top: 1px;
+	}
+
+	0% {
+		right: -2px;
+		top: -1px;
+	}
+}
+
 @keyframes buzz {
-	0%   { right: -2px; top: -1px; }
-	25%  { right:  1px; top:  2px; }
-	50%  { right: -3px; top: -1px; }
-	75%  { right:  2px; top:  1px; }
-	0%   { right: -2px; top: -1px; }
+
+	0% {
+		right: -2px;
+		top: -1px;
+	}
+
+	25% {
+		right: 1px;
+		top: 2px;
+	}
+
+	50% {
+		right: -3px;
+		top: -1px;
+	}
+
+	75% {
+		right: 2px;
+		top: 1px;
+	}
+
+	0% {
+		right: -2px;
+		top: -1px;
+	}
+}
+
+@-webkit-keyframes swoop {
+
+	0% {
+		-webkit-transform: rotate(95deg);
+		transform: rotate(95deg);
+	}
+
+	100% {
+		-webkit-transform: rotate(455deg);
+		transform: rotate(455deg);
+	}
 }
 
 @keyframes swoop {
-  0%   { transform: rotate( 95deg  ); }
-  100% { transform: rotate( 455deg ); }
+
+	0% {
+		-webkit-transform: rotate(95deg);
+		transform: rotate(95deg);
+	}
+
+	100% {
+		-webkit-transform: rotate(455deg);
+		transform: rotate(455deg);
+	}
 }
 
 .about-wrap .bbp-badge {
