Users: First-pass search forms in profile content pages.
This commit makes it possible to search user profiles for specific topics & replies (styling still needed.)

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -1214,6 +1214,7 @@ fieldset div.avatar {
 
 #bbpress-forums .bbp-user-section {
 	overflow: auto;
+	clear: right;
 }
 
 #bbpress-forums #bbp-user-wrapper h2.entry-title {
