Converter: Add toggle to show/hide the database password contents.
This change provides a relatively sane middle-ground for insecure content warnings in the converter, by providing a button to toggle the `password` field back and forth to a `text` field. Ideally, in the future, there will be a legitimate way to do this.

Trunk, for 2.6. See #3153.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -481,6 +481,56 @@ div.bbp-converter-log .step {
 	margin-top: 2px;
 }
 
+.bbp-converter-db-password-wrapper {
+	display: inline-block;
+	position: relative;
+}
+
+#_bbp_converter_db_pass::-webkit-credentials-auto-fill-button {
+	display: none;
+    visibility: hidden;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+}
+
+button.bbp-db-pass-toggle {
+	border: none;
+	background: #fff;
+	position: absolute;
+	right: 3px;
+	top: 3px;
+	padding: 0;
+	margin: 0;
+	cursor: pointer;
+	color: #aaa;
+	height: 25px;
+	width: 25px;
+	font: 400 20px/1 dashicons !important;
+}
+
+button.bbp-db-pass-toggle:hover {
+	color: #888;
+}
+button.bbp-db-pass-toggle.text:after {
+	content: '\f530';
+}
+button.bbp-db-pass-toggle.password:after {
+	content: '\f177';
+}
+
+@media screen and ( max-width: 782px ) {
+	.bbp-converter-db-password-wrapper {
+		width: 100%;
+	}
+
+	button.bbp-db-pass-toggle {
+		height: 35px;
+		width: 35px;
+		font: 400 20px/1 dashicons !important;
+	}
+}
+
 /* Tools */
 
 td.bbp-tool-title strong {
