Assets: Lint recent CSS & JS changes for password toggle.
This change makes the build process work again. :)

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -484,7 +484,7 @@ div.bbp-converter-log .mini-step {
 	font-weight: 600;
 	border-radius: 6px;
 	background-color: #aaa;
-	color: white;
+	color: #fff;
 }
 
 #bbp-converter-monitor .bbp-progress-bar {
@@ -523,12 +523,12 @@ div.bbp-converter-log .mini-step {
 	position: relative;
 }
 
-#_bbp_converter_db_pass::-webkit-credentials-auto-fill-button {
+.bbp-converter-db-pass::-webkit-credentials-auto-fill-button {
 	display: none;
-    visibility: hidden;
-    pointer-events: none;
-    position: absolute;
-    right: 0;
+	visibility: hidden;
+	pointer-events: none;
+	position: absolute;
+	right: 0;
 }
 
 button.bbp-db-pass-toggle {
@@ -549,14 +549,17 @@ button.bbp-db-pass-toggle {
 button.bbp-db-pass-toggle:hover {
 	color: #888;
 }
+
 button.bbp-db-pass-toggle.text:after {
-	content: '\f530';
+	content: "\f530";
 }
+
 button.bbp-db-pass-toggle.password:after {
-	content: '\f177';
+	content: "\f177";
 }
 
 @media screen and ( max-width: 782px ) {
+
 	.bbp-converter-db-password-wrapper {
 		width: 100%;
 	}
